--- a/styles/style.css
+++ b/styles/style.css
@@ -9,7 +9,7 @@
     box-sizing: border-box;
 }
 body {
-    font-family: Rubic, poppins;
+    font-family: Rubik;
     color: #fff;
 }
 a{
@@ -539,34 +539,61 @@ a{
 
     /* ==========MOBILE NAV========== */
     .mobile__nav {
-        background-color: var(--Very-Dark-Blue);
-        opacity: .9;
-        position: absolute;
-        z-index: 10;
-        min-height: 100vh;
-        top: 0;
-        right: 0;
-        left: 0;
-        bottom: 0;
+       background-color: var(--Very-Dark-Blue);
+       position: absolute;
+       left: 0;
+       bottom: 0;
+       right: 0;
+       top: 0;
+       z-index: 20;
+       opacity: .94;
+       letter-spacing: 2px;
+       transform: scale(0);
+       transition: transform .4s cubic-bezier(.31,.32,0,.96);
     }
-        .mobile__nav__container {
+        .mobile__nav .socials__icons {
+            width: 50%;
             margin: 0 auto;
-            width: 80%;
         }
-            .mobile__nav__header {
+
+        .mobile__nav.toggle {
+            transform: scale(1);
+        }
+
+        .mobile__nav .header__container {
+            margin: auto;
+            width: 100%;
+        }
+            .mobile__nav__container {
+                margin: 0 auto;
+                width: 85%;
+                height: 90%;
                 display: flex;
+                flex-direction: column;
                 justify-content: space-between;
-                align-items: center;
-            }
-            .mobile__nav__logo {
-                border: 2px solid red;
-                display: grid;
             }
 
-            .mobile__nav__logo svg .path__white, .mobile__nav__logo svg circle {
-                fill: #fff;
+            .mobile__nav__links {
+                /* border: 1px solid red; */
+                margin-top: 20px;
             }
-            .mobile__nav__logo svg .path__black {
-                fill: var(--Very-Dark-Blue);
+            .mobile__nav__links .link{
+                display: flex;
+                align-items: center;
+                justify-content: center;
+                padding: 20px;
+                border-bottom: 1px solid var(--Grayish-Blue);
             }
-                
+            .mobile__nav__links .link:first-child{
+                border-top: 1px solid var(--Grayish-Blue);
+            }
+        .nav__btn {
+            height: 40px;
+            width: 100%;
+            background-color: transparent;
+            border: 2px solid;
+            color: #fff;
+            letter-spacing: inherit;
+            text-transform: uppercase;
+            margin-top: 20px;
+        }
